--- a/estilos.css
+++ b/estilos.css
@@ -77,7 +77,7 @@ header{
 
 .tres{
     background-color: #303030;
-    height: 600px;
+    height: 800px;
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
@@ -85,9 +85,10 @@ header{
     color: #F2F2F2;
 }
 .proyectos{
-    width: 60%;
+    width: 80%;
     display: flex;
     justify-content: center;
+    margin: 5px;
 }
 .card{
     text-align: center;
@@ -95,6 +96,7 @@ header{
     border: solid #F2F2F2 1px;
     border-radius: 10px;
     padding: 10px;
+    margin: 5px;
 }
 .card img{
     width: 100%;
@@ -107,6 +109,8 @@ header{
     height: 60px;
     background-color: #F2F2F2;
     border-radius: 10px;
+    margin: 0 10px 0 10px;
+
 }
 
 footer{
@@ -117,6 +121,7 @@ footer{
     align-items: center;
     color: #F2F2F2;
     height: 200px;
+    width: 500px;
 }
 .contacto{
     width: 30%;
